--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # "root" as username and password.
 server.context-path=/gommastore
 
-spring.datasource.url = jdbc:mysql://localhost:3306/contraderchain
+spring.datasource.url = jdbc:mysql://localhost:3306/contraderchain2
 spring.datasource.username = root
 spring.datasource.password = root
 
